--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "@astrojs/sitemap": "^3.4.1",
     "astro": "^5.9.1",
     "sharp": "^0.34.2"
+  },
+  "devDependencies": {
+    "@astrojs/tailwind": "^6.0.2",
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^3.4.17"
   }
 }
