--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "astro/tsconfigs/strict",
-  "include": [".astro/types.d.ts", "**/*"],
+  "include": ["env.d.ts", ".astro/types.d.ts", "src"],
   "exclude": ["dist"],
   "compilerOptions": {
     "strictNullChecks": true
